feat: 登录页首页部分样式

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,8 +1,8 @@
 .app {
-  --background: 0 0% 100%; /* #ffffff */
+  --background: 206 37% 96%; /* #F2F6F9 */
   --foreground: 0 0% 20%; /* #333333 */
-  --primary: 206 100% 53%; /* #0D97FF */
-  --primary-foreground: 0 0% 100%; /* #ffffff */
+  --primary: 0 76% 59%; /* #E64747 */
+  --primary-foreground: 206 37% 96%; /* #F2F6F9 */
   --secondary: 0 0% 91%; /* #E7E7E7 */
   --secondary-foreground: 0 0% 47%; /* #797979 */
   --muted: 0 0% 97%; /* #f7f7f7 */
